# apollo

./: .setup.sh  Cargo.toml  README.md
src/: lib.rs  main.rs  utils.rs
src/_legacy/: gst_display.rs
src/capture/: decoder.rs  frame.rs  gst_capture.rs  mod.rs  v4l2.rs
src/display/: display.rs  gpu.rs  gst_display.rs  mod.rs  pixels.rs
src/pipeline/: ringbuf.rs
