[package]
name = "apollo"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
# Async runtime - using Tokio with io-uring support for maximum performance
tokio = { version = "1.45", features = [
    "rt-multi-thread",
    "sync",
    "time",
    "macros",
    "signal",
    "io-util"
] }
tokio-uring = { version = "0.5", optional = true } # io_uring for zero-copy I/O on Linux 5.19+
# Video capture - using libcamera for modern camera stack
v4l = "0.14" # V4L2 bindings
libcamera = { version = "0.3", optional = true } # Modern camera stack
nix = { version = "0.30", features = ["ioctl", "mman", "poll"] } # System calls
# Display - GPU-accelerated rendering
wgpu = "23.0" # Latest WebGPU implementation
pollster = "0.4" # Block on async in wgpu
raw-window-handle = "0.6"
# Image processing
zune-jpeg = "0.4" # Fastest JPEG decoder in Rust (faster than turbojpeg bindings)
image = { version = "0.25", default-features = false, features = [
    "jpeg",
    "png"
] }
# Memory management
bytes = "1.5" # Zero-copy byte buffers
memmap2 = "0.9" # Memory-mapped I/O
crossbeam = "0.8" # Lock-free data structures
arc-swap = "1.7" # Atomic Arc swapping
once_cell = "1.21" # Lazy static initialization
# Channels - using flume for better performance than std/tokio channels
flume = "0.11" # Fast MPMC channels
ringbuf = "0.4.8" # Lock-free SPSC ring buffer
# Error handling and logging
thiserror = "2.0"
color-eyre = "0.6" # Beautiful error reports
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "time",
    "fmt"
] }
tracing-tracy = { version = "0.11", optional = true } # Tracy profiler integration
# Metrics and profiling
metrics = "0.24" # Lightweight metrics
# Configuration
config = { version = "0.14", features = ["toml"] }
serde = { version = "1.0", features = ["derive"] }
# System optimization
libc = "0.2"
core_affinity = "0.8" # CPU pinning
page_size = "0.6" # Huge pages support
rkyv = "0.7.45"
sdl2 = { version = "0.37", features = ["bundled"] }
jpeg-decoder = "0.3.2"

[features]
default = ["gpu-display", "fast-jpeg"]
gpu-display = [] # GPU accelerated display
fast-jpeg = [] # Use -jpeg
io-uring = ["tokio-uring"] # Linux io_uring support
libcamera = ["dep:libcamera"] # Modern camera stack
profiling = ["tracing-tracy"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = false # Keep symbols for profiling
panic = "abort"
debug = 1 # Minimal debug info

[profile.release-with-debug]
inherits = "release"
strip = false
debug = 2

# Special profile for maximum performance
[profile.bench]
inherits = "release"
lto = "fat"
codegen-units = 1
